--- a/templates/exam/footer.html
+++ b/templates/exam/footer.html
@@ -45,12 +45,12 @@
         <div class="col-md-12 col-sm-12">
           <div style="color: #ffffff" class="wow fadeInUp footer-copyright">
             <p>
-              &copy; Aptech Learning - 2024 Made by (Parth Shelar, Aseef Khan, Swati Jha, Prakash Jaiswar and
-              Ninad Karade)
+              &copy; Aptech Learning - 2024 Made by (Parth Shelar, Aseef Khan, Swati Jha, Prakash Jaiswar
+              Ninad Karade, Rohit Mahadik, Akshay Gurav, Tanushree Chaturvedi and Dipesh Kapse)
             </p>
             <p>
-              👨🏻‍💻Skills utilized: Flask(v3), Python(v3), MySQL(v8),
-              HTML5, CSS3, jinja2, Javascript(ECMA Script), Jquery(v1),
+              👨🏻‍💻Skills utilized: Flask(v3),Django(v5), MySQL(v8), SQLite, Postgresql
+              HTML5, CSS3, Javascript(ECMA Script), Jquery(v1),
               Bootstrap(v3).
             </p>
           </div>
